<resources>
    <string name="app_name">Verstka2</string>

    <string name="tv_username">Username</string>
        <string name="tv_email">Email</string>
    <string name="tv_password">Password</string>
        <string name="tv_question">"?"</string>
        <string name="next">NEXT</string>
        <string name="back">back</string>
        <string name="trivia">Trivia</string>
        <string name="register">REGISTER</string>
        <string name="image">TV</string>
        <string name="Image">TV</string>
    </resources>