<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/btn_back"
        android:layout_width="50dp"
        android:layout_height="40dp"
        android:backgroundTint="@color/white"
        android:drawableEnd="@drawable/baseline_arrow_back_24"
        android:paddingEnd="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.07"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.06" />

    <TextView
        android:id="@+id/tv_reg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        app:layout_constraintVertical_bias="0.06"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="#558B2F"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/ed_un"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/tv_username"
        android:autofillHints="username"
        android:textSize="30sp"
        android:background="@drawable/design"
        android:layout_margin="20dp"
        android:paddingStart="12dp"
        android:textColorHint="#558B2F"
        app:layout_constraintVertical_bias="0.3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/ed_em"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/tv_email"
        android:autofillHints="emailAddress"
        android:textSize="30sp"
        android:background="@drawable/design"
        android:layout_margin="20dp"
        android:paddingStart="12dp"
        android:textColorHint="#558B2F"
        app:layout_constraintVertical_bias="0.38"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/ed_pw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/tv_password"
        android:autofillHints="password"
        android:textSize="30sp"
        android:background="@drawable/design"
        android:layout_margin="20dp"
        android:paddingStart="12dp"
        android:textColorHint="#558B2F"
        app:layout_constraintVertical_bias="0.46"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/next"
        android:textSize="25sp"
        android:backgroundTint="@color/white"
        android:textColor="@color/black"
        android:drawableEnd="@drawable/ic_arrow_r"
        android:paddingStart="55dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.55"/>

    <TextView
        android:id="@+id/tv_q1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_question"
        android:textColor="#616161"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.68"/>

    <TextView
        android:id="@+id/tv_q2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_question"
        android:textColor="#616161"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.65"/>

    <TextView
        android:id="@+id/tv_q3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_question"
        android:textColor="#616161"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.68"/>

   <ImageView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintVertical_bias="0.78"
       android:src="@drawable/ic_cap"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/trivia"
        android:textSize="35sp"
        android:textStyle="bold"
        android:textColor="#616161"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9"/>

</androidx.constraintlayout.widget.ConstraintLayout>